--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,12 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "prettier"],
+  "extends": ["eslint:recommended", "prettier", "plugin:jest/recommeded"],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
+  "plugins": ["jest"],
   "rules": {}
 }
