--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "babel-jest": "^29.6.2",
     "css-loader": "^6.8.1",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-jest": "^27.2.3",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.6.2",
     "prettier": "^3.0.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
@@ -79,7 +84,7 @@
     "yallist": "^4.0.0"
   },
   "scripts": {
-    "test": "test"
+    "test": "jest "
   },
   "author": "zebramilk",
   "license": "MIT"
