--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "prettier", "plugin:jest/recommeded"],
+  "extends": ["eslint:recommended", "prettier", "plugin:jest/recommended"],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
